# grpcApi/rpc_hello_from_server.go
@@ -1,0 +1,20 @@
+package grpcApi
+
+import (
+	"context"
+	"fmt"
+
+	"github.com/saalikmubeen/backend-masterclass-go/pb"
+)
+
+func (server *server) HelloFromServer(ctx context.Context, req *pb.HelloFromServerRequest) (*pb.HelloFromServerResponse, error) {
+
+	metadata := server.extractMetadata(ctx)
+
+	return &pb.HelloFromServerResponse{
+		Message:    "Hello from the server",
+		ClientIp:   metadata.ClientIP,
+		UserAgent:  metadata.UserAgent,
+		ServerName: fmt.Sprintf("HTTP: %s, gRPC: %s", server.config.HTTPServerAddress, server.config.GRPCServerAddress),
+	}, nil
+}
