# pb/service_simple_bank.pb.gw.go
@@ -109,6 +109,24 @@ func local_request_SimpleBankService_LoginUser_0(ctx context.Context, marshaler 
 
 }
 
+func request_SimpleBankService_HelloFromServer_0(ctx context.Context, marshaler runtime.Marshaler, client SimpleBankServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq HelloFromServerRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.HelloFromServer(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_SimpleBankService_HelloFromServer_0(ctx context.Context, marshaler runtime.Marshaler, server SimpleBankServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq HelloFromServerRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := server.HelloFromServer(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterSimpleBankServiceHandlerServer registers the http handlers for service SimpleBankService to "mux".
 // UnaryRPC     :call SimpleBankServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -187,6 +205,31 @@ func RegisterSimpleBankServiceHandlerServer(ctx context.Context, mux *runtime.Se
 		}
 
 		forward_SimpleBankService_LoginUser_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_SimpleBankService_HelloFromServer_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/service_simple_bank.SimpleBankService/HelloFromServer", runtime.WithHTTPPathPattern("/v1/hello"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_SimpleBankService_HelloFromServer_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_SimpleBankService_HelloFromServer_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -297,6 +340,28 @@ func RegisterSimpleBankServiceHandlerClient(ctx context.Context, mux *runtime.Se
 
 	})
 
+	mux.Handle("GET", pattern_SimpleBankService_HelloFromServer_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/service_simple_bank.SimpleBankService/HelloFromServer", runtime.WithHTTPPathPattern("/v1/hello"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_SimpleBankService_HelloFromServer_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_SimpleBankService_HelloFromServer_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -306,6 +371,8 @@ var (
 	pattern_SimpleBankService_UpdateUser_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "update_user"}, ""))
 
 	pattern_SimpleBankService_LoginUser_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "login_user"}, ""))
+
+	pattern_SimpleBankService_HelloFromServer_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "hello"}, ""))
 )
 
 var (
@@ -314,4 +381,6 @@ var (
 	forward_SimpleBankService_UpdateUser_0 = runtime.ForwardResponseMessage
 
 	forward_SimpleBankService_LoginUser_0 = runtime.ForwardResponseMessage
+
+	forward_SimpleBankService_HelloFromServer_0 = runtime.ForwardResponseMessage
 )
